<resources>
    <string name="app_name">epatientenprotokoll</string>
    <string name="jetzt">Jetzt</string>
    <string name="ausgeruckt">Ausgerückt</string>
    <string name="einsatzort">Einsatzort</string>
    <string name="abfahrt">Abfahrt</string>
    <string name="spital">Spital</string>
    <string name="einsatzbereit">Einsatzbereit</string>
    <string name="endzeit">Endzeit</string>
    <string name="zielort">Zielort</string>
    <string-array name="operation_array">
        <item>Krankheit</item>
        <item>Unfall</item>
        <item>Isolette</item>
        <item>Psychiatrie</item>
    </string-array>
    <string-array name="language_array">
        <item>D</item>
        <item>F</item>
    </string-array>
    <string-array name="gender_array">
        <item>Mann</item>
        <item>Frau</item>
        <item>Kind</item>
    </string-array>

    <string name="name">Name</string>
    <string name="vorname">Vorname</string>
    <string name="strasse">Strasse</string>
    <string name="plz">PLZ</string>
    <string name="ort">Ort</string>
    <string name="telefon">Telefon</string>
    <string name="rechnung">Rechnung an</string>
    <string name="patient">Patient</string>
    <string name="status">Status</string>
    <string name="verdacht">Verdacht</string>
    <string name="naca">NACA</string>
    <string name="oeffnenAugen">Öffnen der Augen</string>
    <string name="eyes1">nicht</string>
    <string name="eyes2">auf Schmerzreiz</string>
    <string name="eyes3">auf Anruf</string>
    <string name="eyes4">spontan</string>

    <string-array name="eyes_array">
        <item>spontan</item>
        <item>auf Anruf</item>
        <item>auf Schmerzreiz</item>
        <item>nicht</item>
    </string-array>

    <string name="spontan">spontan</string>
    <string name="anruf">auf Anruf</string>
    <string name="schmerzreiz">nach Schmerzreiz</string>
    <string name="nicht">nicht</string>

    <string name="response1">keine</string>
    <string name="response2">unverständlich</string>
    <string name="response3">verworren</string>
    <string name="response4">unvollständig orientiert</string>
    <string name="response5">voll orientiert</string>


    <string name="antworten">Antworten</string>
    <string-array name="response_array">
        <item>voll orientiert</item>
        <item>unvollständig \norientiert</item>
        <item>verworren</item>
        <item>unverständlich</item>
        <item>keine</item>
    </string-array>

    <string name="reaction1">keine</string>
    <string name="reaction2">Streckung</string>
    <string name="reaction3">Beugung</string>
    <string name="reaction4">ungezielt auf Schmerzen</string>
    <string name="reaction5">gezielt auf Schmerzen</string>
    <string name="reaction6">adäquat</string>

    <string name="motorischeReak">Motorische Reaktionen</string>
    <string-array name="reaction_array">
        <item>adäquat</item>
        <item>gezielt auf \nSchmerzen</item>
        <item>ungezielt auf \nSchmerzen</item>
        <item>Beugung</item>
        <item>Streckung</item>
        <item>keine</item>
    </string-array>

    <string name="gsc">Glasgow Coma Scale</string>
    <string name="materialundlagerung">Material und Lagerung</string>
    <string name="anamnese">Anamnese</string>

    <string name="halskragen">Halskragen</string>
    <string name="rettungsbrett">Rettungsbrett</string>
    <string name="wundversorgung">Wundversorgung</string>

    <string-array name="material_array1">
        <item>Vaakummatratze</item>
        <item>Vaakumschienen</item>
        <item>Schaufelbahre</item>
        <item>Fernostuhl</item>
        <item>Beckengurt</item>
        <item>Eisbeutel</item>
        <item>KED</item>
        <item>Warm Up</item>
    </string-array>

    <string-array name="material_array2">
        <item>Halskragen</item>
        <item>Rettungsbrett</item>
        <item>Wundversorgung</item>
    </string-array>

    <string-array name="halskragen_array">
        <item>Erwachsene</item>
        <item>Kinder</item>
    </string-array>

    <string-array name="rettungsbrett_array">
        <item>Transport</item>
        <item>Rettung</item>
    </string-array>

    <string-array name="wundversorgung_array">
        <item>klein</item>
        <item>gross</item>
    </string-array>

    <string name="weitereMat">Weitere verbrauchte Materialien:</string>
    <string name="zielortAbgegeben">Am Zielort abgegebenes Material</string>
    <string name="effekten">Effekten</string>
    <string name="medikamente">Medikamente</string>
    <string name="wertsachen">Wertsachen</string>
    <string name="rxBilder">Rx-Bilder</string>
    <string name="arztpflegebericht">Arzt-/Pflegebericht</string>

    <string-array name="abgegebenMaterial_array">
        <item>Effekten</item>
        <item>Medikamente</item>
        <item>Wertsachen</item>
        <item>Arzt-/Pflegebericht</item>
        <item>RX-Bilder</item>
        <item>AED Firstresponder</item>
    </string-array>

    <string name="ventilation">Beatmung</string>
    <string name="intubation">Intubation</string>
    <string name="extubation">Extubation</string>
    <string name="defibrilation">Defibrillation</string>
    <string name="pacing">Ext. Pacing</string>
    <string name="heart_massage">Herzmassage</string>
    <string name="bloodpressure">BD</string>
    <string name="pulse">Puls</string>

    <string-array name="lagerung_seitenlage">
        <item>links</item>
        <item>rechts</item>
    </string-array>

    <string-array name="onetothree">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="temperature">Temp °C</string>
    <string name="breath_frequency">Atemfrequenz</string>
    <string name="breath_frequency_input">Bitte geben Sie die Atemfrequenz pro Minute ein.</string>
    <string name="pulsox_input">Geben Sie die Sauerstoffsättigung in % ein.</string>
    <string name="pain_input">Geben Sie die Schmerzen des Patienten ein (10 = Max, 0 = Min).</string>
    <string name="hgt_input">Geben Sie das Resultat des Hämoglucotest in mmol / l ein.</string>
    <string name="co2_input">Geben Sie die endexpiratorischen CO2-Partialdruck in mmHg ein.</string>
    <string name="pulsox">Sp02 Pulsox %</string>
    <string name="co2">Et CO2 mmHg</string>
    <string name="hgt">HGT mmol / l</string>
    <string name="pain">Schmerz-Score</string>
    <string name="ekg">EKG I, II, III, 12er, Pads</string>
    <string name="venous_canule">Venenkanüle</string>
    <string name="nacl">NaCl 0.9% ml</string>
    <string name="point">.</string>
    <string name="celcius">°C</string>
    <string name="breath_per_minute"> / min</string>
    <string name="percent">%</string>
    <string name="mmHg"> mmHg</string>
    <string name="mmol"> mmol/l</string>
    <string name="einsatzmeldung1">Trauma Extremität/RQW</string>
    <string name="einsatzmeldung2">Alter: 37; Männlich; Verletzung/RQW; unbekannt ob Arbeitsunfall. Verletzung am Kopf unklare Ursache. \nPolizei ist unterwegs. </string>
    <string name="einsatzmeldung12">Bewusstlose Person</string>
    <string name="einsatzmeldung22">Männliche bewusstlose Person. Erste Reanmationsversuche durch Passanten erfolglos.</string>
    <string-array name="lang_array">
        <item>Français</item>
        <item>Deutsch</item>
    </string-array>
    <string name="fentanyl">Fentanyl</string>
    <string name="fentanyl_input">Geben Sie die Menge an Fentanyl an.</string>
    <string name="adrenalin">Adrenalin</string>
    <string name="adrenalin_input">Geben Sie die Menge an Adrenalin an.</string>
    <string name="glukose">Glukose</string>
    <string name="glukose_input">Geben Sie die Menge an Glukose an.</string>

    <string name="pupillen">Pupillen</string>
    <string name="pupillen1">+</string>
    <string name="pupillen2">(+)</string>
    <string name="pupillen3">-</string>

    <string-array name="urgency_array">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>Dienstfahrt</item>
        <item>PVS2/3 - P51</item>
    </string-array>
    
    <string-array name="present_array">
        <item>Arzt</item>
        <item>Polizei</item>
        <item>FW</item>
        <item>REGA</item>
        <item>SZB</item>
        <item>Angehörige</item>
        <item>Andere</item>
    </string-array>

    <string name="L">L</string>
    <string name="F">F</string>
    <string name="H1">H1</string>
    <string name="H2">H2</string>
    
    <string name="carNb">BE Nr.</string>
    <string name="kmDeparture">Km Abfahrt</string>
    <string name="kmArrival">Km Ankunft</string>

    <string name="patientDescr">Noa Marti; Korngasse 25; 2502 Biel; 079 999 99 99; M; 04.12.1981</string>
    <string name="reason">Grund</string>
    <string name="reasonAccident">Unfall</string>
    <string name="anamnesisDescr">RQW am Hinterkopf. Baustellenplatte hat den Patienten auf dem Hinterkopf getroffen. Orientierung bzgl. Person, Ort und Zeit vorhanden. Keine Amnesie. Keine relevanten bestehenden Erkrankungen.</string>
    <string name="suspicionDescr">Schädel-Hirn-Trauma</string>
    <string name="three">3</string>
    <string name="GCSdescr">15 / 11 / 11</string>
    <string name="pupilsDescr1">13:15 li klein +, re klein +</string>
    <string name="pupilsDescr2">13:23 li mittel (+), re klein +</string>
    <string name="pupilsDescr3">13:26 li mittel (+), re klein</string>
    <string name="material">Materialien</string>
    <string name="materialDescr">Wundversorgung gross</string>
    <string name="submittedMaterial">Am Zielort abgegeben</string>
    <string name="submittedMaterialDescr">Effekten, Wertsachen</string>
    <string name="positioning">Lagerung</string>
    <string name="positioningDescr">Liegend, Oberkörper angewinkelt</string>

    <string name="cancel">Abbrechen</string>
    <string name="submit">Bestätigen</string>

    <string name="child">Kind</string>
    <string name="capillar">Kapillar</string>
    <string name="venous">Venös</string>

    <string name="gcsSum">GCS Summe:</string>
</resources>
