<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Alarm"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tAusruck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/ausgeruckt"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeAusruck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bAusruck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tEinsatzort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/einsatzort"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeEinsatzort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bEinsatzort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tAbfahrt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/abfahrt"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeAbfahrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bAbfahrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tSpital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/spital"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeSpital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bSpital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tEinsatzbereit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/einsatzbereit"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeEinsatzbereit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bEinsatzbereit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tEndzeit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/endzeit"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/timeEndzeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="time" />

        <Button
            android:id="@+id/bEndzeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/jetzt" />
    </LinearLayout>
</LinearLayout>