<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mstb="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="horizontal"
            android:paddingLeft="7dp"
            android:weightSum="6">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verdacht"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etSuspected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:ems="10"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/suspected_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:background="@color/lightGrey"
                app:srcCompat="@drawable/information" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:paddingLeft="40dp"
                android:text="@string/naca"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etNaca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="4"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/naca_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:background="@color/lightGrey"
                app:srcCompat="@drawable/information" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            android:paddingLeft="7dp"
            android:paddingBottom="7dp"
            android:weightSum="30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gsc"
                    android:textColor="@android:color/black"
                    android:textSize="22dp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oeffnenAugen"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <org.honorato.multistatetogglebutton.MultiStateToggleButton
                    android:id="@+id/mstb_eyes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:mstbColorNotPressedText="@color/grey"
                    app:mstbColorPressedText="@color/grey"
                    app:mstbPrimaryColor="@android:color/black"
                    app:mstbSecondaryColor="@color/grey"
                    app:values="@array/eyes_array">

                </org.honorato.multistatetogglebutton.MultiStateToggleButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/antworten"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <org.honorato.multistatetogglebutton.MultiStateToggleButton
                    android:id="@+id/mstb_response"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:mstbColorNotPressedText="@color/grey"
                    app:mstbColorPressedText="@color/grey"
                    app:mstbPrimaryColor="@android:color/black"
                    app:mstbSecondaryColor="@color/grey"
                    app:values="@array/response_array"></org.honorato.multistatetogglebutton.MultiStateToggleButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/motorischeReak"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <org.honorato.multistatetogglebutton.MultiStateToggleButton
                    android:id="@+id/mstb_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:mstbColorNotPressedText="@color/grey"
                    app:mstbColorPressedText="@color/grey"
                    app:mstbPrimaryColor="@android:color/black"
                    app:mstbSecondaryColor="@color/grey"
                    app:values="@array/reaction_array" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
